# Cpp_guides

0001_openssl/: adding_openssl_to_project.md  adding_to_project.md
0001_openssl/projects/test_openssl/: CMakeLists.txt  main.cpp
0001_using_of_openssl/: adding_to_project.md
0002_ncurses/: adding_ncurses_to_project.md
0002_ncurses/projects/test_ncurses/: CMakeLists.txt  main.cpp
0003_gtest/: adding_gtest_to_project.md
0003_gtest/projects/test_gtest/: CMakeLists.txt  mainapp.c
0003_gtest/projects/test_gtest/modules/: CMakeLists.txt  calculations.c  calculations.h
0003_gtest/projects/test_gtest/tests/: CMakeLists.txt  test_calculations.cpp
0004_doxygen/projects/test_doxygen/src/: main.cpp
0005_doxygen/: adding_doxygen_to_project.md
0005_doxygen/projects/test_doxygen/: CMakeLists.txt  Doxyfile
0005_doxygen/projects/test_doxygen/include/: MathOperations.h
0005_doxygen/projects/test_doxygen/src/: MathOperations.cpp
0005_gtkmm/: adding_gtkmm_to_project.md
0005_gtkmm/adding_to_project/project/test_gtkmm/: main.cpp
0005_gtkmm/example_of_mvc_module/: .gitignore  CMakeLists.txt
0005_gtkmm/example_of_mvc_module/inc/: main_window.hpp
0005_gtkmm/example_of_mvc_module/inc/modules/: module.hpp
0005_gtkmm/example_of_mvc_module/inc/modules/settings/boolean_setting_module/: boolean_setting_module.hpp
0005_gtkmm/example_of_mvc_module/inc/modules/settings/boolean_setting_module/mvc/: boolean_setting_module_controller.hpp  boolean_setting_module_model.hpp  boolean_setting_module_view.hpp
0005_gtkmm/example_of_mvc_module/src/: main.cpp  main_window.cpp
0005_gtkmm/example_of_mvc_module/src/modules/settings/boolean_setting_module/: boolean_setting_module.cpp
0005_gtkmm/example_of_mvc_module/src/modules/settings/boolean_setting_module/mvc/: boolean_setting_module_controller.cpp  boolean_setting_module_model.cpp  boolean_setting_module_view.cpp
0005_gtkmm/example_of_mvc_module_with_model_in_other_thread/: CMakeLists.txt  main.cpp  module_interface.h  status_controller.cpp  status_controller.h  status_model.cpp  status_model.h  status_module.cpp  status_module.h  status_view.cpp  status_view.h
0005_gtkmm/projects/test_gtkmm/: CMakeLists.txt
0006_catch2/: README.md  adding_catch2_to_project.md  catch2_summary.txt  guide.txt
0006_catch2/Quick_guide_to_Catch2/: README.md
0006_catch2/projects/test_catch2/: CMakeLists.txt
0006_catch2/projects/test_catch2/inc/: math_utils.h
0006_catch2/projects/test_catch2/tests/: test_math_utils.cpp
0006_gtkmm/: adding_gtkmm_to_project.md
0006_gtkmm/projects/test_gtkmm/: CMakeLists.txt  helloworld.cpp  helloworld.hpp
0007_fakeit/: adding_fakeit_to_project.md  fakeit_summary.txt
0007_fakeit/projects/test_fakeit/: CMakeLists.txt
0007_fakeit/projects/test_fakeit/inc/: math_service.h
0007_fakeit/projects/test_fakeit/src/: main.cpp
0007_fakeit/projects/test_fakeit/tests/: test_math_service.cpp
0008_crow/: adding_crow_to_project.md
0008_crow/projects/test_crow/: CMakeLists.txt  main.cpp
0009_lief/: adding_lief_to_project.md
0009_lief/projects/test_lief/: CMakeLists.txt  main.cpp
0010_spdlog/: adding_spdlog_to_project.md
0010_spdlog/projects/test_spdlog/: CMakeLists.txt  main.cpp
0012_gdb/: gdb_summary.txt
0013_lldb/: lldb_summary.txt
0013_lldb/project_for_test/: .gitignore
0013_lldb/project_for_test/src/: cpu_ic_number_of_cores.cpp  main.cpp
0014_boost_test/: boost_test_summary.txt
0015_creating_threads/: CMakeLists.txt  example1.cpp
0015_creating_threads/inc/: cpu_ic_architecture.hpp  cpu_ic_number_of_cores.hpp  information_collector.hpp
0015_creating_threads/src/: cpu_ic_architecture.cpp
11_cryptopp/: mini_guide_cmake.txt
11_cryptopp/project/: CMakeLists.txt  main.cpp
